# vcard-downloader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/workflows/: clippy_check.yml
migrations/2024-01-11-173558_create_vcards/: down.sql  up.sql
migrations/2024-04-28-191758_create_analytics/: down.sql  up.sql
public/: 404.html  index.html  styles.css
src/: db.rs  main.rs  models.rs  schema.rs  sqlite.rs  vcard.rs  vcard_processor.rs
src/db/: sqlite.rs
