[package]
name = "vcard-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3"
mime_guess = "2"
diesel= {version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"]}
dotenvy = "0"
serde_json = "1"
serde = {version = "1", features = ["derive"]}